# conwaysgame-cpp

./: ;  Button.cpp  Button.h  CMakeLists.txt  Conway.cpp  Conway.h  Game.cpp  Game.h  GameUI.cpp  GameUI.h  SDLContext.cpp  SDLContext.h  example.cpp  main.cpp  utils.cpp  utils.h
